--- a/css/main.css
+++ b/css/main.css
@@ -474,32 +474,25 @@ a:focus {
 .layout-5 .answer-checked .exercise__answer.is-selected.is-correct-answer:after,
 .layout-7 .answer-checked .exercise__answer.is-selected.is-correct-answer:after {content: "答對了！"}
 
-.layout-4 .answer-checked .exercise__answer.is-selected.is-correct-answer:before {
+.layout-4 .answer-checked .exercise__answer.is-selected.is-correct-answer:before,
+.layout-4 .is-wrong .exercise__answer-list:before
+{
 	bottom: -35px;
 	top: inherit;
 	left: 50%;
-	margin-left: 18px;
+	margin-left: -43px;
 }
 
-.layout-4 .answer-checked .exercise__answer.is-selected.is-correct-answer:after {
+.layout-4 .answer-checked .exercise__answer.is-selected.is-correct-answer:after,
+.layout-4 .is-wrong .exercise__answer-list:after
+{
 	bottom: -39px;
 	top: inherit;
 	left: 50%;
-	margin-left: -8px;;
+	margin-left: -8px;
+	right: initial;;
 }
 
-.layout-4 .is-wrong .exercise__answer-list:before {
-	top: 70px;
-	left: 50%;
-	margin-left: -62px;
-}
-
-.layout-4 .is-wrong .exercise__answer-list:after {
-	top: 70px;
-	left: 50%;
-	margin-left: -25px;
-	right: inherit;
-}
 .layout-5 .is-wrong .exercise__answer-list:before {
 	top: -18px;
 	right: 164px;
@@ -692,6 +685,7 @@ a:focus {
 	display: inline-block;
 	width: 140px;
 	margin: 0 10px;
+	position: static;
 }
 
 .layout-5 .exercise__answer-list {
@@ -1204,8 +1198,7 @@ svg line {
 }
 .ch3.ex1 .exercise__question .exercise__question-image,
 .ch2.ex3 .exercise__question .exercise__question-image,
-.ch5.ex3 .exercise__question .exercise__question-image,
-.ch8.ex2 .exercise__question .exercise__question-image
+.ch5.ex3 .exercise__question .exercise__question-image
 {
 	width: auto;
 	height: auto;
@@ -1230,9 +1223,8 @@ svg line {
 	height: 173px;
 
 }
-.ch2.ex3 .exercise__question,
-.ch5.ex3 .exercise__question,
-.ch8.ex2 .exercise__question
+
+.ch5.ex3 .exercise__question
 {
 	width: 56%;
 }
@@ -1248,30 +1240,18 @@ svg line {
 	max-height: 280px;
 	max-width: 100%;
 }
-.ch2.ex3 .exercise__answer-list-outer,
-.ch5.ex3 .exercise__answer-list-outer,
-.ch8.ex2 .exercise__answer-list-outer
+.ch5.ex3 .exercise__answer-list-outer
 {
 	margin-left: 320px;
 }
-.ch2.ex3 .answer-checked .exercise__answer.is-selected:before,
-.ch5.ex3 .answer-checked .exercise__answer.is-selected:before
-{
-	bottom: 11px;
-	margin-left: 42px;
-}
 .ch2.ex3 .is-wrong .exercise__answer-list:before,
-.ch5.ex3 .is-wrong .exercise__answer-list:before,
-.ch8.ex2 .is-wrong .exercise__answer-list:before,
-.ch8.ex2 .answer-checked .exercise__answer.is-selected:before
+.ch5.ex3 .is-wrong .exercise__answer-list:before
 {
 	top: inherit;
 	bottom: -40px;
 }
 .ch2.ex3 .is-wrong .exercise__answer-list:after,
-.ch5.ex3 .is-wrong .exercise__answer-list:after,
-.ch8.ex2 .is-wrong .exercise__answer-list:after,
-.ch8.ex2 .answer-checked .exercise__answer.is-selected:after
+.ch5.ex3 .is-wrong .exercise__answer-list:after
 {
 	top: inherit;
 	bottom: -45px;
@@ -1339,7 +1319,7 @@ svg line {
 .ch10.ex3 .answer-revealed .dropzone:after
 {content: none;}
 
-.ch8.ex1 .exercise__answer-text-inner > .fa:first-child,
+.ch8.ex1 .qtype__tof .exercise__answer-text-inner > .fa:first-child,
 .ch4 .qtype__tof-mc .exercise__answer-text-inner > .fa-check-circle,
 .ch4 .qtype__tof-mc .exercise__answer-text-inner > .fa-times-circle,
 .ch4 .qtype__tofx2 .exercise__answer-text-inner > .fa-check-circle,
@@ -1422,3 +1402,52 @@ svg line {
 .ch9.ex1 .dropzone:nth-child(3) { background-image: url(../img/ch9/ex1/9-1-3-3.png); }
 .ch9.ex1 .dropzone:nth-child(4) { background-image: url(../img/ch9/ex1/9-1-3-4.png); }
 .ch9.ex1 .dropzone:nth-child(5) { background-image: url(../img/ch9/ex1/9-1-3-5.png); }
+
+.ch2.ex2 .owl-carousel .owl-item {padding-bottom: 40px;}
+.ch2.ex2 .exercise__question-text {	font-size: 18px; }
+.ch2.ex2 .answer-checked .exercise__answer.is-selected.is-correct-answer:before,
+.ch2.ex2 .is-wrong .exercise__answer-list:before
+{ margin-left: -55px;}
+.ch2.ex2 .answer-checked .exercise__answer.is-selected.is-correct-answer:after,
+.ch2.ex2 .is-wrong .exercise__answer-list:after
+{ margin-left: -22px;}
+
+.ch2.ex3 .exercise__question {width: 64%;}
+.ch2.ex3 .exercise__answer-list-outer {margin-left: 370px;}
+
+.ch8.ex2 .exercise__question {width: 70%;}
+.ch8.ex2 .exercise__question .exercise__question-image { width: 100%; }
+.ch8.ex2 .exercise__answer-list-outer {margin-left: 410px;}
+.ch8.ex2 .is-wrong .exercise__answer-list:after,
+.ch8.ex2 .answer-checked .exercise__answer.is-selected:after {right: -5px;left: initial;}
+
+.ch6.ex3 .exercise__question .exercise__question-image {width: auto;height: auto;}
+
+.ch8.ex1 .exercise__question {margin-bottom: 5px;}
+.ch8.ex1 .exercise__question-text {font-size: 24px}
+.ch1.ex2 .owl-carousel .owl-item {padding-bottom: 40px;}
+.ch1.ex2 .dropzone {
+	background-color: rgb(247,150,70);
+	border-left: 3px solid #CE6E1F;
+	border-right: 3px solid #CE6E1F;
+	padding-top: 70px;
+}
+.ch1.ex2 .dropzone:before,
+.ch1.ex2 .dropzone:after {
+	content: '';
+	background-color: rgb(247,150,70);
+	display: block;
+	width: 102.5%;
+	height: 100px;
+	position: absolute;
+	left: -3px;
+	right: 0;
+	border-radius: 130px / 50px;
+	
+	border: 3px solid #CE6E1F;
+}
+.ch1.ex2 .dropzone:before {top: -49px;z-index: 1;}
+.ch1.ex2 .dropzone:after {bottom: -50px;z-index: -1;}
+.ch1.ex2 .dropzone .exercise__answer {
+	background-color: #CA610A;
+}
