--- a/css/main.css
+++ b/css/main.css
@@ -726,7 +726,7 @@ a:focus {
 .layout-10 .dragzone .exercise__answer {
 	display: inline-block;
 	padding-left: 0;
-	margin: 0 3px;
+	margin: 0 1%;
 }
 .layout-10 .dragzone .exercise__answer-image {
 	width: auto;
@@ -1277,7 +1277,7 @@ svg line {
 {padding: 0;}
 .ch4.ex2 .dragzone .exercise__answer,
 .ch10.ex3 .dragzone .exercise__answer
-{width: 32.1%;}
+{width: 48%;}
 
 .ch4.ex2 .dropzone .exercise__answer,
 .ch10.ex3 .dropzone .exercise__answer
@@ -1296,7 +1296,7 @@ svg line {
 .ch4.ex2 .exercise__answer-image,
 .ch10.ex3 .exercise__answer-image,
 .ch10.ex3 .dropzone .exercise__answer-image
-{ height: 124px; }
+{ height: 182px; }
 
 .ch4.ex2 .dropzone .exercise__answer-image,
 .ch10.ex3 .dropzone .exercise__answer-image
@@ -1453,3 +1453,12 @@ svg line {
 .ch1.ex2 .dropzone .exercise__answer {
 	background-color: #CA610A;
 }
+
+.ch1.ex4 .dropzone:first-child,
+.ch4.ex2 .dropzone:first-child,
+.ch10.ex3 .dropzone:first-child
+{ background-color: #ECB724; color: #fff; }
+.ch1.ex4 .dropzone:last-child,
+.ch4.ex2 .dropzone:last-child,
+.ch10.ex3 .dropzone:last-child
+{ background-color: #BF2441; color: #fff; }
