--- a/css/main.css
+++ b/css/main.css
@@ -1456,16 +1456,23 @@ svg line {
 
 .ch1.ex4 .dropzone:first-child,
 .ch4.ex2 .dropzone:first-child,
-.ch10.ex3 .dropzone:first-child
+.ch10.ex3 .dropzone:first-child,
+.ch3.ex3 .dropzone:first-child
 { background-color: #ECB724; color: #fff; }
 .ch1.ex4 .dropzone:last-child,
 .ch4.ex2 .dropzone:last-child,
-.ch10.ex3 .dropzone:last-child
+.ch10.ex3 .dropzone:last-child,
+.ch3.ex3 .dropzone:last-child
 { background-color: #BF2441; color: #fff; }
 
 .ch3.ex2 .dragzone .exercise__answer
 {
 	margin: 0 3px;
 }
-.ch3.ex2 .exercise__question-number
+.ch3.ex2 .exercise__question-number,
+.ch3.ex3 .exercise__question-number
 {display: none;}
+
+.ch3.ex3 .dropzone {
+	padding: 10px;
+}
