UI Bugfix: Hiding question number for single question exercise

--- a/css/main.css
+++ b/css/main.css
@@ -1466,14 +1466,7 @@ svg line {
 {
 	margin: 0 3px;
 }
-.ch3.ex2 .exercise__question-number,
-.ch3.ex3 .exercise__question-number,
-.ch6.ex1 .exercise__question-number,
-.ch7.ex1 .exercise__question-number,
-.ch7.ex2 .exercise__question-number,
-.ch9.ex2 .exercise__question-number,
-.ch9.ex3 .exercise__question-number,
-.ch10.ex2 .exercise__question-number
+.single-question-ex .exercise__question-number
 { display: none }
 
 .ch7.ex2 .check-answer-button
