--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,16 @@ a:focus {
 /* ==========================================================================
    Layout
    ========================================================================== */
+html, body {
+	height: 100%;
+}
 body {
 	background-color: #541D00;
 	background-image: url(../img/bg.png);
 	background-repeat: repeat;
 }
 .container {
-	width: 750px;
+	/*width: 750px;*/
 	/*width: 100%;*/
 	min-height: 600px;
 	/*max-height: 890px;*/
@@ -30,12 +33,13 @@ body {
     padding: 20px;
 	overflow: auto;
 	position: relative;
+	width: auto;
 }
-@media (max-width: 650px) {
+/*@media (max-width: 650px) {
 	.container {
 		width: 595px;
 	}
-}
+}*/
 #bg {
 	position: absolute;
 	left: 0;
