--- a/css/main.css
+++ b/css/main.css
@@ -1394,32 +1394,32 @@ svg line {
 	background-position: top center;
 }
 .ch4.ex1 .dropzone {background-size: 82px 70px;}
-.ch4.ex1 .dropzone:nth-child(1) { background-image: url(../img/ch4/ex1/4-1-2-6.png); }
-.ch4.ex1 .dropzone:nth-child(2) { background-image: url(../img/ch4/ex1/4-1-2-7.png); }
-.ch4.ex1 .dropzone:nth-child(3) { background-image: url(../img/ch4/ex1/4-1-2-8.png); }
-.ch4.ex1 .dropzone:nth-child(4) { background-image: url(../img/ch4/ex1/4-1-2-9.png); }
-.ch4.ex1 .dropzone:nth-child(5) { background-image: url(../img/ch4/ex1/4-1-2-10.png); }
+.ch4.ex1 .dropzone:nth-child(1) { background-image: url(../img/4-1-2-6.png); }
+.ch4.ex1 .dropzone:nth-child(2) { background-image: url(../img/4-1-2-7.png); }
+.ch4.ex1 .dropzone:nth-child(3) { background-image: url(../img/4-1-2-8.png); }
+.ch4.ex1 .dropzone:nth-child(4) { background-image: url(../img/4-1-2-9.png); }
+.ch4.ex1 .dropzone:nth-child(5) { background-image: url(../img/4-1-2-10.png); }
 
 .ch6.ex1 .dropzone {background-size: 82px 70px;}
-.ch6.ex1 .dropzone:nth-child(1) { background-image: url(../img/ch6/ex1/6-1-1-6.png); }
-.ch6.ex1 .dropzone:nth-child(2) { background-image: url(../img/ch6/ex1/6-1-1-7.png); }
-.ch6.ex1 .dropzone:nth-child(3) { background-image: url(../img/ch6/ex1/6-1-1-8.png); }
-.ch6.ex1 .dropzone:nth-child(4) { background-image: url(../img/ch6/ex1/6-1-1-9.png); }
-.ch6.ex1 .dropzone:nth-child(5) { background-image: url(../img/ch6/ex1/6-1-1-10.png); }
+.ch6.ex1 .dropzone:nth-child(1) { background-image: url(../img/6-1-1-6.png); }
+.ch6.ex1 .dropzone:nth-child(2) { background-image: url(../img/6-1-1-7.png); }
+.ch6.ex1 .dropzone:nth-child(3) { background-image: url(../img/6-1-1-8.png); }
+.ch6.ex1 .dropzone:nth-child(4) { background-image: url(../img/6-1-1-9.png); }
+.ch6.ex1 .dropzone:nth-child(5) { background-image: url(../img/6-1-1-10.png); }
 
 .ch10.ex2 .dropzone {background-size: 82px 70px;}
-.ch10.ex2 .dropzone:nth-child(1) { background-image: url(../img/ch10/ex2/10-2-1-6.png); }
-.ch10.ex2 .dropzone:nth-child(2) { background-image: url(../img/ch10/ex2/10-2-1-7.png); }
-.ch10.ex2 .dropzone:nth-child(3) { background-image: url(../img/ch10/ex2/10-2-1-8.png); }
-.ch10.ex2 .dropzone:nth-child(4) { background-image: url(../img/ch10/ex2/10-2-1-9.png); }
-.ch10.ex2 .dropzone:nth-child(5) { background-image: url(../img/ch10/ex2/10-2-1-10.png); }
+.ch10.ex2 .dropzone:nth-child(1) { background-image: url(../img/10-2-1-6.png); }
+.ch10.ex2 .dropzone:nth-child(2) { background-image: url(../img/10-2-1-7.png); }
+.ch10.ex2 .dropzone:nth-child(3) { background-image: url(../img/10-2-1-8.png); }
+.ch10.ex2 .dropzone:nth-child(4) { background-image: url(../img/10-2-1-9.png); }
+.ch10.ex2 .dropzone:nth-child(5) { background-image: url(../img/10-2-1-10.png); }
 
 .ch9.ex1 .dropzone {background-size: 82px 70px;}
-.ch9.ex1 .dropzone:nth-child(1) { background-image: url(../img/ch9/ex1/9-1-3-1.png); }
-.ch9.ex1 .dropzone:nth-child(2) { background-image: url(../img/ch9/ex1/9-1-3-2.png); }
-.ch9.ex1 .dropzone:nth-child(3) { background-image: url(../img/ch9/ex1/9-1-3-3.png); }
-.ch9.ex1 .dropzone:nth-child(4) { background-image: url(../img/ch9/ex1/9-1-3-4.png); }
-.ch9.ex1 .dropzone:nth-child(5) { background-image: url(../img/ch9/ex1/9-1-3-5.png); }
+.ch9.ex1 .dropzone:nth-child(1) { background-image: url(../img/9-1-3-1.png); }
+.ch9.ex1 .dropzone:nth-child(2) { background-image: url(../img/9-1-3-2.png); }
+.ch9.ex1 .dropzone:nth-child(3) { background-image: url(../img/9-1-3-3.png); }
+.ch9.ex1 .dropzone:nth-child(4) { background-image: url(../img/9-1-3-4.png); }
+.ch9.ex1 .dropzone:nth-child(5) { background-image: url(../img/9-1-3-5.png); }
 
 .ch2.ex2 .owl-carousel .owl-item {padding-bottom: 40px;}
 .ch2.ex2 .exercise__question-text {	font-size: 18px; }
