--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,15 @@ a:focus {
    Layout
    ========================================================================== */
 html, body {
+	width: 100%;
 	height: 100%;
+
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 body {
 	background-color: #541D00;
@@ -33,7 +41,7 @@ body {
     padding: 20px;
 	overflow: auto;
 	position: relative;
-	width: auto;
+	width: 100%!important;
 }
 /*@media (max-width: 650px) {
 	.container {
@@ -43,6 +51,10 @@ body {
 #bg {
 	position: fixed;
 	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	overflow: hidden;
 }
 .header {
 	margin-bottom: 20px;
