--- a/css/main.css
+++ b/css/main.css
@@ -300,7 +300,8 @@ body {
 .show-answer-button,
 .first-question .owl-prev,
 .last-question .owl-next,
-.first-question.last-question .owl-nav {
+.first-question.last-question .owl-nav
+.first-question.last-question .owl-buttons {
 	opacity: 0.3;
 	pointer-events: none;
 }
@@ -394,7 +395,8 @@ body {
 /* ==========================================================================
    Owl Carousel customization
    ========================================================================== */
-.owl-carousel .owl-stage-outer {
+.owl-carousel .owl-stage-outer,
+.owl-carousel .owl-wrapper-outer {
 	background-color: #FFFBDB;
 	margin-top: 5px;
 	border-radius: 20px;
@@ -411,24 +413,31 @@ body {
 	height: 0;
 	top: -103px;
 }
-.owl-theme .owl-nav {
+.owl-theme .owl-nav,
+.owl-theme .owl-buttons 
+{
 	margin-top: 0;
 }
-.owl-theme .owl-nav .fa {
+.owl-theme .owl-nav .fa,
+.owl-theme .owl-buttons .fa 
+{
 	color: #E96D84;
 }
 
-.owl-carousel .owl-controls .owl-nav .owl-prev,
-.owl-carousel .owl-controls .owl-nav .owl-next {
+.owl-carousel .owl-prev,
+.owl-carousel .owl-next
+{
 	background-color: #FFFBDB;
 	color: #541D00;
 	border-radius: 15px;
 	padding: 5px 14px;
 }
-.owl-carousel .owl-controls .owl-nav .owl-prev {
+.owl-carousel .owl-prev
+{
 	float: left;
 }
-.owl-carousel .owl-controls .owl-nav .owl-next {
+.owl-carousel .owl-next
+{
 	float: right;
 }
 
