--- a/css/main.css
+++ b/css/main.css
@@ -755,7 +755,7 @@ body {
 	text-align: center;
 	height: 200px;
 	line-height: 200px;
-	background-color: #aaa;
+	/*background-color: #aaa;*/
 }
 .layout-7 .owl-carousel .owl-item {
 	padding: 30px 0px 40px 20px;
