Relegate the reset function handler from score board button to reset button

--- a/css/main.css
+++ b/css/main.css
@@ -181,9 +181,9 @@ body {
 	font-weight: bold;
 	margin-right: 13px;
 }
-.reset-stored-json {
+/*.reset-stored-json {
 	font-size: 12px;
-}
+}*/
 .exercise-container {
 	padding: 16px 20px 15px;
 	background-color: #E96D84;
