--- a/css/main.css
+++ b/css/main.css
@@ -1238,7 +1238,7 @@ svg line {
 .ch3.ex1 .exercise__question,
 .ch2.ex3 .exercise__question,
 .ch5.ex3 .exercise__question,
-.ch8.ex2 .exercise__question
+.ch8.ex1 .exercise__question
 {
 	float: left;
 }
@@ -1261,7 +1261,7 @@ svg line {
 .ch3.ex1 .exercise__answer,
 .ch2.ex3 .exercise__answer,
 .ch5.ex3 .exercise__answer,
-.ch8.ex2 .exercise__answer
+.ch8.ex1 .exercise__answer
 {
 	margin-bottom: 7px;
 	display: block;
@@ -1281,12 +1281,12 @@ svg line {
 }
 .ch2.ex3 .exercise__question-content,
 .ch5.ex3 .exercise__question-content,
-.ch8.ex2 .exercise__question-content
+.ch8.ex1 .exercise__question-content
 {width: 100%;
 }
 .ch2.ex3 .exercise__question .exercise__question-image,
 .ch5.ex3 .exercise__question .exercise__question-image,
-.ch8.ex2 .exercise__question .exercise__question-image
+.ch8.ex1 .exercise__question .exercise__question-image
 {
 	max-height: 280px;
 	max-width: 100%;
@@ -1308,14 +1308,14 @@ svg line {
 	bottom: -45px;
 }
 
-.ch8.ex2 .exercise__answer {
+.ch8.ex1 .exercise__answer {
 	position: static;
 }
-.ch8.ex2 .answer-checked .exercise__answer.is-selected:before{
+.ch8.ex1 .answer-checked .exercise__answer.is-selected:before{
 	right: inherit;
 	margin-left: -50px;
 }
-.ch8.ex2 .answer-checked .exercise__answer.is-selected:after {
+.ch8.ex1 .answer-checked .exercise__answer.is-selected:after {
 	right: inherit;
 	margin-left: -17px;
 }
@@ -1370,7 +1370,7 @@ svg line {
 .ch10.ex3 .answer-revealed .dropzone:after
 {content: none;}
 
-.ch8.ex1 .qtype__tof .exercise__answer-text-inner > .fa:first-child,
+.ch8.ex2 .qtype__tof .exercise__answer-text-inner > .fa:first-child,
 .ch4 .qtype__tof-mc .exercise__answer-text-inner > .fa-check-circle,
 .ch4 .qtype__tof-mc .exercise__answer-text-inner > .fa-times-circle,
 .ch4 .qtype__tofx2 .exercise__answer-text-inner > .fa-check-circle,
@@ -1466,17 +1466,18 @@ svg line {
 .ch2.ex3 .exercise__question {width: 64%;}
 .ch2.ex3 .exercise__answer-list-outer {margin-left: 370px;}
 
-.ch8.ex2 .exercise__question {width: 70%;}
-.ch8.ex2 .exercise__question .exercise__question-image { width: 100%; }
-.ch8.ex2 .exercise__answer-list-outer {margin-left: 410px;}
-.ch8.ex2 .is-wrong .exercise__answer-list:after,
-.ch8.ex2 .answer-checked .exercise__answer.is-selected:after {right: -5px;left: initial;}
+.ch8.ex1 .exercise__question {width: 70%;}
+.ch8.ex1 .exercise__question .exercise__question-image { width: 100%; }
+.ch8.ex1 .exercise__answer-list-outer {margin-left: 410px;}
+.ch8.ex1 .is-wrong .exercise__answer-list:after,
+.ch8.ex1 .answer-checked .exercise__answer.is-selected:after {right: -5px;left: initial;}
 
 .ch6.ex3 .exercise__question-content {text-align: center;}
 .ch6.ex3 .exercise__question .exercise__question-image { min-width: 150px; min-height: 100px; }
 
-.ch8.ex1 .exercise__question {margin-bottom: 5px;}
-.ch8.ex1 .exercise__question-text {font-size: 24px}
+.ch8.ex2 .exercise__question {margin-bottom: 5px;}
+.ch8.ex2 .exercise__question-text {font-size: 24px}
+.ch8.ex2 .exercise__question-image {min-width: 390px}
 .ch1.ex2 .owl-carousel .owl-item {padding-bottom: 40px;}
 .ch1.ex2 .dropzone {
 	background-color: #AA562C;
