--- a/css/main.css
+++ b/css/main.css
@@ -843,12 +843,23 @@ body {
 	transition: all 0.3s;
 }
 .layout-12 .dropzone .exercise__answer.is-correct-answer {
-	opacity: 0;
+	/*opacity: 0;
 	height: 0;
 	padding: 0;
 	margin: 0;
 	border: 0;
-	visibility: hidden;
+	visibility: hidden;*/
+}
+.layout-12 .answer-revealed .exercise__answer.is-correct-answer {
+	/*opacity: 1;*/
+	/*height: auto;*/
+	/*visibility: visible;*/
+	padding: 0;
+	display: block!important;
+}
+.layout-12 .answer-revealed .dropzones-outer {
+	height: auto;
+	margin-bottom: 30px;
 }
 .layout-12 .answer-checked .exercise__answer {
 	pointer-events: all;
